--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "lint": "eslint .",
+    "lintfix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,10 @@
   },
   "homepage": "https://github.com/Glexen/matchbot-bot#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "telegraf": "^3.38.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0"
   }
 }
